--- a/src/assets/css/utils.css
+++ b/src/assets/css/utils.css
@@ -10,4 +10,12 @@
   box-shadow: 0px 0px 0.25rem 0.2rem #222;
 }
 
+.text-right {
+  text-align: right !important;
+}
+
+.border-radius-0 {
+  border-radius: 0 !important;
+}
+
 /*# sourceMappingURL=utils.css.map */
