--- a/src/scss/mixins/theme.scss
+++ b/src/scss/mixins/theme.scss
@@ -1,21 +1,48 @@
 $theme-1: (
+    "bg": #29862e,
+    "bg2": #519043,
+    "color": whitesmoke,
+    "border-color": #045206,
+);
+$theme-2: (
     "bg": #295e86,
     "bg2": #436d90,
     "color": whitesmoke,
     "border-color": #688093,
 );
+$theme-3: (s
+    "bg": #ffbb00,
+    "bg2": #e37d00,
+    "color": whitesmoke,
+    "border-color": #623b00,
+);
+$theme-4: (
+    "bg": #ba1ecb,
+    "bg2": #560f52,
+    "color": whitesmoke,
+    "border-color": #530a36,
+);
+$theme-5: (
+    "bg": #29865e,
+    "bg2": #0de696,
+    "color": whitesmoke,
+    "border-color": #233e35,
+);
 @mixin applyTheme($tname, $tmap) {
     .#{$tname} {
         background-color: map-get($map: $tmap, $key: bg);
         color: map-get($map: $tmap, $key: color);
+        transition: background-color 0.4s ease;
         .bg-2 {
             background-color: map-get($map: $tmap, $key: bg2);
+            transition: background-color 0.4s ease;
         }
         * {
             border-color: map-get($map: $tmap, $key: border-color);
+            transition: border-color 0.4s ease;
         }
         .border {
-            border-color: map-get($map: $tmap, $key: border-color) !important;
+            transition: border-color 0.4s ease;
         }
     }
 }
