--- a/src/scss/utils.scss
+++ b/src/scss/utils.scss
@@ -7,3 +7,9 @@
 .box-shadow-1 {
     box-shadow: 0px 0px 0.25rem 0.2rem #222;
 }
+.text-right {
+    text-align: right !important;
+}
+.border-radius-0  {
+    border-radius: 0 !important;
+}
